# basic-rendering

./: Cargo.toml  README.md  todo
assets/: policecar.mtl  portal.mtl
src/: asset_manager.rs  component.rs  component_manager.rs  lib.rs  main.rs  query.rs  ray.rs  resource.rs  window.rs  world.rs
src/components/: click.rs  click_move.rs  mod.rs  model.rs  transform.rs  velocity.rs  walk_to.rs  walkable_surface.rs
src/entities/: player.rs
src/loaders/: gltf.rs  mod.rs  obj.rs
src/renderer/: context.rs  depth.wgsl  draw_state.rs  mod.rs  pipeline_default.rs  pipeline_depth.rs  pn.wgsl  pnc.wgsl  render.rs  shader.wgsl
src/renderer/loaders/: obj.rs
src/systems/: camera.rs  click.rs  input.rs  mod.rs  movement.rs
src/traits/: entity.rs  mesh.rs  mod.rs
