[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2.5"
wgpu = "0.15.0"
winit = "0.28.1"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0" 
cgmath = "0.18"
tobj = { version = "3.2.1", features = [
    "async",
]}
futures-intrusive = "0.5.0"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]